# machine_learning

./: .gitignore  Cargo.toml  README.md
read_csv/: Cargo.toml
read_csv/src/: reader.rs
src/: main.rs
src/ConvNnet/: conv_nnet.rs  mod.rs
src/CustomNnet/: custom_nnet.rs  mod.rs
src/KMeans/: k_means.rs
src/KNearestNeighbors/: k_nearest_neighbors.rs  mod.rs
src/Polars/: polars.rs
src/ReadSort/: read_csv.rs
src/SimpleNeuralNetwork/: mod.rs  simple_neural_networks.rs
src/SmartCore/: mod.rs  smart_core.rs
src/chart/: chart01.rs  chart02.rs  chart03.rs  chart04.rs  linear_function.rs  matshow.rs  mod.rs  relu_function.rs  sigmoid_function.rs  sign_function.rs  step_function.rs  tanh_function.rs  time_series.rs
src/data_fusion/: data_fusion.rs  mod.rs
src/ds_note/: ds_note01.rs  ds_note02.ipynb  ds_note02.rs  ds_note03.ipynb  mod.rs
src/fish/: fish01.py  fish01.rs  fish02.py  fish03.py  fish04.py  fish05.py  fish06.py  fish07.py  fish08.py  fruits01.py  mod.rs  wine01.py  wine01.rs  wine02.py  wine03.py
src/kaggle/: house_beginner.rs  iris_beginner.rs  iris_beginner_linfa.rs  mod.rs  spaceship_beginner.rs  titanic_beginner.py  titanic_beginner.rs
src/kaggle/house_price/: house_price.rs  mod.rs
src/ml/: grid_search_cv.rs  mod.rs
src/pish/: fish01.py  fish02.py  mod.rs  pish.rs
src/polars_ch/: mod.rs  polars_ch01.rs
src/sql/: mod.rs  sql_connect.rs
