[package]
name = "muchine_learning_tutotial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-trees = "0.7.0"
linfa-kernel = "0.7.0"
linfa-svm = "0.7.0"
linfa-logistic = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
linfa-linear = "0.7.0"
csv = "1.1"
ndarray = "0.15.6"
smartcore="0.2.0"
plotters = "0.3.5"
polars = "0.34.2"
linfa-nn = "0.7.0"