[package]
name = "muchine_learning_tutotial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-trees = "0.7.0"
linfa-kernel = "0.7.0"
linfa-svm = "0.7.0"
linfa-logistic = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris"] }
linfa-linear = "0.7.0"
csv = "1.1"
ndarray = "0.15.6"
smartcore="0.3.2"
plotters = "0.3.5"
polars = { version = "0.34.2", features = ["ndarray","to_dummies","lazy"] }
polars-core = "0.34.2"
polars-io = "0.34.2"
tokio-util = "0.7.10"
linfa-nn = "0.7.0"
chrono = "0.4.31"